<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">无线点餐</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="menu_title_user">姓名</string>
    <string name="menu_title_order">点餐</string>
    <string name="menu_title_changedesk">转台</string>
    <string name="menu_title_collect">菜单</string>
    <string name="menu_title_bill">结账</string>
    <string name="menu_title_reviews">点评</string>
    <string name="menu_title_member">会员特权</string>
    
    <string name="content_order_basicfood">主食面点</string>
    <string name="content_order_colddish">爽口凉菜</string>
    <string name="content_order_cooking">精美小炒</string>
    <string name="content_order_stew">特色炖菜</string>
    <string name="content_order_soup">汤羹食品</string>
    <string name="content_order_pan">锅仔系列</string>
    <string name="content_order_seafood">生猛海鲜</string>
    <string name="content_order_drink">酒水饮料</string>
    
    <string name="content__back">返回</string>
    <string name="content_login_register">注册</string>
    <string name="content_login_land">登陆</string>
    <string name="content_login_account">账号</string>
    <string name="content_login_password">密码</string>
    
    <string name="desk_founding">开台</string>
    
    <string name="contain">下单</string>
    <string name="cancel">取消</string>
    
    <string name="bill_price">¥%1$s</string>
    <string name="bill_paypassage">用支付宝支付或者现金支付</string>
    <string name="bill_time">%1$s 下单</string>
    <string name="bill_cash">现金</string>
    <string name="bill_alipay">支付宝</string>
    <string name="no_order">请先点菜！</string>
    <string name="no_bill">请先下单！</string>
    
    <string name="hotel_name">武汉百仕德大酒店</string>
    <string name="hotel_manager">赵钱孙李</string>
    <string name="hotel_phone">13545225045</string>
    
    <string name="review_name">赵钱孙李</string>
    <string name="review_time">2015年05月10日    12:42:14</string>
    
     <string name="member_transport">会员享有订购外卖满28元免运费服务。非会员订购运费10元</string>
     <string name="member_exchage">每消费100元可获得100积分，每100积分能够减免消费10元，积分可累加。</string>
     <string name="member_review">对于单次消费满100元，会员评价可获取10积分</string>
     <string name="member_sale">铜牌会员可享受95折，银牌会员可享受9折，金牌会员可享受85折</string>
     <string name="member_birthday">生日时在店内消费可领取生日礼包，且在一个自然年内只能领取一次生日礼包</string>
     <string name="member_gift">店内每日会在店内消费的顾客中随机抽取一位，赠送神秘礼包500积分</string>
     
     <string name="changedesk_number">桌子编号</string>
     <string name="changedesk_type">桌子状态</string>
     <string name="changedesk_unuse">可用状态</string>
     
     <string name="register_name">姓名：</string>
     <string name="register_account">账号：</string>
     <string name="register_password">密码：</string>
     <string name="register_integral">积分：</string>
     <string name="register_icon">头像：</string>
     <string name="register_integral_imput">0</string>
     <string name="register_icon_imput">default</string>

</resources>
