<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/content_order_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/order_basicfood"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FFFF6666"
                android:text="@string/content_order_basicfood" />

            <TextView
                android:id="@+id/order_colddish"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FF1e67c0"
                android:text="@string/content_order_colddish" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/order_cooking"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FFd47756"
                android:text="@string/content_order_cooking" />

            <TextView
                android:id="@+id/order_stew"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FF5a626f"
                android:text="@string/content_order_stew" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/order_soup"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FFee7434"
                android:text="@string/content_order_soup" />

            <TextView
                android:id="@+id/order_pan"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FF3eadeb"
                android:text="@string/content_order_pan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/order_seafood"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FF0385fd"
                android:text="@string/content_order_seafood" />

            <TextView
                android:id="@+id/order_drink"
                style="@style/content_order_title"
                android:layout_weight="1"
                android:background="#FF00a179"
                android:text="@string/content_order_drink" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>