<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

       <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_blue" >

        <ImageView
            android:id="@+id/top_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/imageview_margin_right"
            android:background="@drawable/ic_menu_back"
            android:contentDescription="@string/menu_title_order" />

        <TextView
            android:id="@+id/top_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/content_login_land"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/top_founding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/imageview_margin_right"
            android:text="@string/desk_founding"
            android:textColor="@color/white"
            android:clickable="true"
            android:textSize="@dimen/menu_text_size" />
    </RelativeLayout>

    <ListView
        android:id="@+id/food_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" />

</LinearLayout>